--- a/frontend/Rank-Up/src/app/signup/signup.page.scss
+++ b/frontend/Rank-Up/src/app/signup/signup.page.scss
@@ -54,3 +54,18 @@ app-bt-user-small{
   margin-bottom: 0;
 }
 
+.with-eye-icon {
+  position: relative;
+  padding-right: 32px;
+}
+
+.with-eye-icon .eye-icon {
+  position: absolute;
+  top: 50%;
+  right: 3vh;
+  transform: translateY(-50%);
+  font-size: 22px;
+  color: var(--ion-color-medium);
+  z-index: 9999;
+  pointer-events: auto;
+}
