--- a/frontend/Rank-Up/src/app/admin-list/admin-list.page.html
+++ b/frontend/Rank-Up/src/app/admin-list/admin-list.page.html
@@ -39,7 +39,7 @@
           </ion-item>
           <ion-item-options side="end">
             <ion-item-option>
-              <ion-icon name="trash-outline" size="large" color="danger"></ion-icon>
+              <ion-icon name="trash-outline" size="large" color="danger" (click)="removeUserFromTeam(user.user.id)"></ion-icon>
             </ion-item-option>
           </ion-item-options>
         </ion-item-sliding>
@@ -56,7 +56,7 @@
           </ion-item>
           <ion-item-options side="end">
             <ion-item-option>
-              <ion-icon name="trash-outline" size="large" color="danger"></ion-icon>
+              <ion-icon name="trash-outline" size="large" color="danger" (click)="removeUserFromTeam(user.user.id)"></ion-icon>
             </ion-item-option>
           </ion-item-options>
         </ion-item-sliding>
@@ -75,7 +75,7 @@
           </ion-item>
           <ion-item-options side="end">
             <ion-item-option>
-              <ion-icon name="trash-outline" size="large" color="danger"></ion-icon>
+              <ion-icon name="trash-outline" size="large" color="danger" (click)="removeUserFromTeam(user.user.id)"></ion-icon>
             </ion-item-option>
           </ion-item-options>
         </ion-item-sliding>
