--- a/frontend/Rank-Up/src/app/admin-prizes-page/admin-prizes-page.page.html
+++ b/frontend/Rank-Up/src/app/admin-prizes-page/admin-prizes-page.page.html
@@ -24,7 +24,7 @@
         </ion-item>
           <ion-item-options side="end">
             <ion-item-option>
-              <ion-icon name="trash-outline" size="large" color="danger"></ion-icon>
+              <ion-icon name="trash-outline" size="large" color="danger" (click)="removePrize(prize.id)"></ion-icon>
             </ion-item-option>
           </ion-item-options>
         </ion-item-sliding>
