--- a/frontend/Rank-Up/src/app/admin-profile/admin-profile.page.html
+++ b/frontend/Rank-Up/src/app/admin-profile/admin-profile.page.html
@@ -23,11 +23,11 @@
 
     <div class="listBox" *ngIf="!stato">
         <ion-list *ngFor="let activity of activities">
-          <div class="div-label-fakebutton" *ngIf="ruleOrTask(activity)" (click)="goToRule(activity)">
+          <div class="div-label-fakebutton" *ngIf="ruleOrTask(activity)" (click)="clickRule(activity)" (click)="goToRule(activity)">
             <div class="label">{{activity.rule.name}}</div>
             <ion-button class="fakebutton" [disabled]="true">{{activity.rule.points}} pt</ion-button>
           </div>
-          <div class="div-label-fakebutton" *ngIf="!ruleOrTask(activity)" (click)="goToTask(activity)">
+          <div class="div-label-fakebutton" *ngIf="!ruleOrTask(activity)" (click)="clickTask(activity)" (click)="goToTask(activity)">
             <div class="label">{{activity.task.name}}</div>
             <ion-button class="fakebutton" [disabled]="true">{{activity.task.points}} pt</ion-button>
           </div>
