--- a/frontend/Rank-Up/src/app/admin-rule-completed/admin-rule-completed.page.html
+++ b/frontend/Rank-Up/src/app/admin-rule-completed/admin-rule-completed.page.html
@@ -22,10 +22,10 @@
     <ion-grid class="buttons-grid">
       <ion-row>
         <ion-col class="left-col">
-          <ion-button class="visualize-attached">Visualizza<br/>Allegato</ion-button>
+          <ion-button class="visualize-attached" href="{{this.url}}">Visualizza<br/>Allegato</ion-button>
         </ion-col>
         <ion-col class=right-col>
-          <app-bt-admin-small shape="round"  clear [text]="'Chiudi'" (click)="backButton()"></app-bt-admin-small>
+          <app-bt-admin-small shape="round" clear [text]="'Chiudi'" (click)="backButton()"></app-bt-admin-small>
         </ion-col>
       </ion-row>
     </ion-grid>
