--- a/frontend/Rank-Up/src/app/admin-rule-completed/admin-rule-completed.page.html
+++ b/frontend/Rank-Up/src/app/admin-rule-completed/admin-rule-completed.page.html
@@ -23,7 +23,7 @@
       <ion-row>
         <ion-col class="left-col">
           <ion-button class="visualize-attached" *ngIf="this.url !== null" href="{{this.url}}">Visualizza<br/>Allegato</ion-button>
-          <ion-button class="visualize-attached" *ngIf="this.url === null">Visualizza<br/>Allegato</ion-button>
+          <ion-button class="visualize-attached" *ngIf="this.url === null" (click) = "nullAttachedAlert()">Visualizza<br/>Allegato</ion-button>
         </ion-col>
         <ion-col class=right-col>
           <app-bt-admin-small shape="round" clear [text]="'Chiudi'" (click)="backButton()"></app-bt-admin-small>
