--- a/frontend/Rank-Up/src/app/user-profile/user-profile.page.html
+++ b/frontend/Rank-Up/src/app/user-profile/user-profile.page.html
@@ -4,7 +4,7 @@
   </ion-refresher>
   <div class="backgroundUser">
 
-    <img class="imgUser" alt="Utente" src="https://ionicframework.com/docs/img/demos/avatar.svg" />
+    <img class="imgUser" alt="Utente" src={{user_photo}} />
 
     <div id="div-image-title">{{user_name}} {{user_surname}}</div>
 
@@ -115,7 +115,7 @@
       <div class="modal">
         <ion-icon name="document-attach-outline" class="icon"></ion-icon>
         <ion-button fill="clear">
-          <ion-input type="file" (change)="loadFileFromDevice($event)" id="file-input" accept="all">
+          <ion-input type="file" (change)="loadFileFromDevice($event)" id="file-input" accept="image/png, image/jpeg">
           </ion-input>
         </ion-button>
 
