--- a/frontend/Rank-Up/src/app/admin-list/admin-list.page.html
+++ b/frontend/Rank-Up/src/app/admin-list/admin-list.page.html
@@ -32,7 +32,7 @@
         <ion-item-sliding *ngFor="let user of usersJoinsTeam; let i = index">
           <ion-item class="item" (click)="clickUser(user)" [routerLink]="['/admin/admin-profile']">
             <div class="item-div">
-              <img class="imgUser" alt="User" src="https://ionicframework.com/docs/img/demos/avatar.svg" />
+              <img class="imgUser" alt="User" src={{user.user.photo}} />
               <ion-label class="nomeUtente">{{user.user.username}}</ion-label>
               <ion-label class="points-label">{{user.points}}</ion-label>
             </div>
@@ -49,7 +49,7 @@
         <ion-item-sliding *ngFor="let user of userJoinsTeamSearch; let i = index">
           <ion-item class="item" (click)="clickUserId(user.id, user.username, user.points)" [routerLink]="['/admin/admin-profile']">
             <div class="item-div">
-              <img class="imgUser" alt="User" src="https://ionicframework.com/docs/img/demos/avatar.svg" />
+              <img class="imgUser" alt="User" src={{user.photo}} />
               <ion-label class="nomeUtente">{{user.username}}</ion-label>
               <ion-label class="points-label">{{user.points}}</ion-label>
             </div>
@@ -68,7 +68,7 @@
         <ion-item-sliding *ngFor="let user of usersJoinsTeam">
           <ion-item class="item" (click)="clickUser(user)" [routerLink]="['/admin/admin-profile']">
             <div class="item-div">
-              <img class="imgUser" alt="User" src="https://ionicframework.com/docs/img/demos/avatar.svg" />
+              <img class="imgUser" alt="User" src={{user.user.photo}} />
               <ion-label class="nomeUtente">{{user.user.username}}</ion-label>
               <ion-label class="points-label">{{user.points}}</ion-label>
             </div>
@@ -85,7 +85,7 @@
         <ion-item-sliding *ngFor="let user of userJoinsTeamSearch; let i = index">
           <ion-item class="item" (click)="clickUserId(user.id, user.username, user.points)" [routerLink]="['/admin/admin-profile']">
             <div class="item-div">
-              <img class="imgUser" alt="User" src="https://ionicframework.com/docs/img/demos/avatar.svg" />
+              <img class="imgUser" alt="User" src={{user.photo}} />
               <ion-label class="nomeUtente">{{user.username}}</ion-label>
               <ion-label class="points-label">{{user.points}}</ion-label>
             </div>
