--- a/frontend/Rank-Up/src/app/user-team-profile/user-team-profile.page.html
+++ b/frontend/Rank-Up/src/app/user-team-profile/user-team-profile.page.html
@@ -9,7 +9,7 @@
     </ion-button>
 
 
-    <img class="imgUser" alt="Utente" src="https://ionicframework.com/docs/img/demos/avatar.svg"/>
+    <img class="imgUser" alt="Utente" src={{user.photo}}/>
 
 
     <ion-label class="userName">{{user.name}}</ion-label>
