--- a/frontend/Rank-Up/src/app/admin-team-settings/admin-team-settings.page.html
+++ b/frontend/Rank-Up/src/app/admin-team-settings/admin-team-settings.page.html
@@ -10,7 +10,7 @@
 
     <div class="buttons-div">
     <ion-button (click)="presentAlert1()" class="settings-button">Modifica nome team</ion-button>
-    <ion-button (click)="attach()" class="settings-button" id="modalAttached">Modifica foto team</ion-button>
+    <ion-button class="settings-button" id="modalAttached">Modifica foto team</ion-button>
     <ion-button class="settings-button" [routerLink]="['/admin/access-requests-list']">Richieste in attesa</ion-button>
 
     <img src="..\..\assets\image\black-line.svg" alt="">
@@ -35,7 +35,7 @@
       <div class="modal">
         <ion-icon name="images-outline" class="icona" size="large"></ion-icon>
         <ion-button fill="clear">
-          <ion-input type="file" (change)="loadFileFromDevice($event)" id="file-input" accept="all">
+          <ion-input type="file" (change)="loadFileFromDevice($event)" id="file-input" accept="image/png, image/jpeg">
           </ion-input>
         </ion-button>
         <div>
