--- a/frontend/Rank-Up/src/app/home/home.page.html
+++ b/frontend/Rank-Up/src/app/home/home.page.html
@@ -28,16 +28,16 @@
         <ion-row>
           <ion-col *ngFor="let team of teams" sizeLg="6"  sizeMd="6" sizeXs="6" >
             <div *ngIf="userOrAdmin(team)"class="team-card" (click)="goToTeamUser(team)">
-              <div class="img-team-user">
-                <img sizes="large" alt="Team" src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fwww.kindpng.com%2Fpicc%2Fm%2F410-4108064_transparent-groups-of-people-clipart-team-icon-png.png&f=1&nofb=1&ipt=7e6d77faf7d2d967292fd2c9900358d6078b1dad3e041cc7d26632084638e101&ipo=images" />
+              <div>
+                <img class="img-team-user" style="height: 150px; width: 150px;" alt="Team" src={{team.photo}} />
               </div>
               <div class="team-name">
                 <span>{{team.name}}</span>
               </div>
             </div>
-            <div *ngIf="!userOrAdmin(team)"class="team-card" (click)="goToTeamAdmin(team)">
-              <div class="img-team-admin">
-                <img sizes="large" alt="Team" src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fwww.kindpng.com%2Fpicc%2Fm%2F410-4108064_transparent-groups-of-people-clipart-team-icon-png.png&f=1&nofb=1&ipt=7e6d77faf7d2d967292fd2c9900358d6078b1dad3e041cc7d26632084638e101&ipo=images" />
+            <div *ngIf="!userOrAdmin(team)" class="team-card" (click)="goToTeamAdmin(team)">
+              <div>
+                <img class="img-team-admin" style="height: 150px; width: 150px;" alt="Team"  src={{team.photo}} />
               </div>
               <div class="team-name">
                 <span>{{team.name}}</span>
