--- a/frontend/Rank-Up/src/app/notifications/notifications.page.html
+++ b/frontend/Rank-Up/src/app/notifications/notifications.page.html
@@ -3,7 +3,7 @@
   <ion-refresher slot="fixed" (ionRefresh)="handleRefresh($event)">
     <ion-refresher-content></ion-refresher-content>
   </ion-refresher>
-  
+
   <div [ngSwitch]="type">
 
     <div *ngSwitchCase="'utente'" class="backgroundUser">
@@ -24,7 +24,7 @@
       </ion-segment>
 
       <ion-list class="notifications" lines="none">
-        <ion-item class="item" *ngFor="let n of this.nUser" [routerLink]="['/user/user-notification-description, n.id']">
+        <ion-item class="item" *ngFor="let n of this.nUser" [routerLink]="['/user/user-notification-description']">
           <ion-label class="label">{{n.date}}</ion-label>
           <ion-label class="label">{{n.title}}</ion-label>
           <ion-label class="label">{{n.teamName}}</ion-label>
@@ -61,5 +61,5 @@
   </div>
 </ion-content>
 
-<ion-alert trigger="ingresso" header="Accettare l'utente [nome utente] nel team [nome team]?"
+<ion-alert header="Accettare l'utente [nome utente] nel team [nome team]?"
   [buttons]="alertBtns"></ion-alert>
