--- a/frontend/Rank-Up/src/app/send-task/send-task.page.html
+++ b/frontend/Rank-Up/src/app/send-task/send-task.page.html
@@ -28,7 +28,7 @@
           <div class="text">Rifiuta</div>
         </div>
         <div class="titoloBox">
-          <ion-button class="pulsante conferma" id="conferma">
+          <ion-button class="pulsante conferma" id="conferma"  (click)="sendNotification()">
             <ion-icon name="checkmark-circle-outline"></ion-icon>
           </ion-button>
           <div class="text">Accetta</div>
