--- a/frontend/Rank-Up/src/app/prizes-page/prizes-page.page.html
+++ b/frontend/Rank-Up/src/app/prizes-page/prizes-page.page.html
@@ -8,7 +8,7 @@
       <ion-icon name="arrow-back-outline" size="large"></ion-icon>
     </ion-button>
 
-    <img class="imgUser" alt="Utente" src="https://ionicframework.com/docs/img/demos/avatar.svg" />
+    <img class="imgUser" alt="Utente"  src={{user_photo}} />
 
     <div id="div-image-title">{{user.name}} </div>
 
