--- a/frontend/Rank-Up/src/app/admin-profile/admin-profile.page.html
+++ b/frontend/Rank-Up/src/app/admin-profile/admin-profile.page.html
@@ -4,7 +4,7 @@
       <ion-icon name="arrow-back-outline" size="large"></ion-icon>
     </ion-button>
 
-    <img class="imgUser" alt="Utente" src="https://ionicframework.com/docs/img/demos/avatar.svg" />
+    <img class="imgUser" alt="Utente"  src={{user.photo}} />
     <h1 class="nameUser">{{userJoin.user.name}}</h1>
     <h2 class="scoreUser">Punti: {{userJoin.points}}</h2>
 
