--- a/frontend/Rank-Up/src/app/create-team/create-team.page.html
+++ b/frontend/Rank-Up/src/app/create-team/create-team.page.html
@@ -39,20 +39,19 @@
     <ng-template>
       <ion-header>
         <ion-toolbar>
-          <ion-title>Immagine:</ion-title>
+          <ion-title>Modifica Foto</ion-title>
         </ion-toolbar>
       </ion-header>
       <ion-content>
         <div class="modal">
-          <ion-icon name="images-outline" class="icon-attach" size="large"></ion-icon>
+          <ion-icon name="images-outline" class="icona" size="large"></ion-icon>
           <ion-button fill="clear">
-            <ion-input type="file" (change)="loadFileFromDevice($event)" id="file-input" accept="all">
+            <ion-input type="file" (change)="loadFileFromDevice($event)" id="file-input" accept="image/png, image/jpeg">
             </ion-input>
           </ion-button>
-
           <div>
             <app-bt-admin-small text="Annulla" (click)="closeModal()" style="margin-right: 0.5vh;"></app-bt-admin-small>
-            <app-bt-user-small text="Aggiungi" (click)="attach()" style="margin-left: 0.5vh;"></app-bt-user-small>
+            <app-bt-user-small text="Conferma" (click)="attach()" style="margin-left: 0.5vh;"></app-bt-user-small>
           </div>
         </div>
       </ion-content>
