--- a/frontend/Rank-Up/src/app/search-team/search-team.page.html
+++ b/frontend/Rank-Up/src/app/search-team/search-team.page.html
@@ -17,7 +17,7 @@
     <div class="listBox" *ngIf="this.teams">
       <div class="grind">
         <div class="team-card" (click)="presentAlert(team.idTeam)" *ngFor="let team of this.teams">
-          <img fill="clear" sizes="large" alt="Team" style="height: 150px; width: 150px;" src={{team.photo}} />
+          <img fill="clear" alt="Team" style="height: 150px; width: 150px;" src={{team.photo}} />
           <h4 class="team-name">
             {{team.name}}
           </h4>
