--- a/frontend/Rank-Up/src/app/notifications/notifications.page.html
+++ b/frontend/Rank-Up/src/app/notifications/notifications.page.html
@@ -25,7 +25,7 @@
 
       <ion-list class="notifications" lines="none">
         <ion-item class="item" *ngFor="let n of this.nUser" [routerLink]="['/user/user-notification-description']" (click)="clicknotificationUser(n.id)">
-          <ion-label class="label">{{n.date}}</ion-label>
+          <ion-label class="label">{{n.date | date:'yyyy-MM-dd HH:mm:ss'}}</ion-label>
           <ion-label class="label">{{n.title}}</ion-label>
           <ion-label class="label">{{n.teamName}}</ion-label>
         </ion-item>
@@ -51,7 +51,7 @@
 
       <ion-list class="notifications" lines="none">
         <ion-item class="item" *ngFor="let n of this.nAdmin" [routerLink]="['/admin/admin-notification-description']" (click)="clicknotificationAdmin(n.id)" >
-          <ion-label class="label">{{n.date}}</ion-label>
+          <ion-label class="label">{{n.date | date:'yyyy-MM-dd HH:mm:ss'}}</ion-label>
           <ion-label class="label">{{n.title}}</ion-label>
           <ion-label class="label">{{n.teamName}}</ion-label>
         </ion-item>
