--- a/frontend/Rank-Up/src/app/rule-confirmation/rule-confirmation.page.html
+++ b/frontend/Rank-Up/src/app/rule-confirmation/rule-confirmation.page.html
@@ -22,7 +22,8 @@
     <h1 class="title" *ngIf="this.data">Richiesta {{this.data.username}} <br/>per  {{this.data.name}}</h1>
     <ion-button slot="start" class="btn"  *ngIf="this.url !== null"  href="{{this.url}}">Vedi Allegato</ion-button>
     <ion-button slot="start" class="btn"  *ngIf="this.url === null" (click)="nullAttachedAlert()">Vedi Allegato</ion-button>
-    <ion-button class="notBtn" *ngIf="this.data">Data: {{this.data.timestamp}}</ion-button>
+    <ion-button class="notBtn" *ngIf="data">Data: {{ data.timestamp | date:'yyyy-MM-dd HH:mm:ss' }}</ion-button>
+
 
     <div class="subTitle">Accettare richiesta di completamento?</div>
     <div class="pulsanteBox">
