added alert for cambia tema button

--- a/frontend/Rank-Up/src/app/user-profile/user-profile.page.html
+++ b/frontend/Rank-Up/src/app/user-profile/user-profile.page.html
@@ -84,7 +84,7 @@
             </ion-col>
             <ion-col>
               <div class="div-element">
-                <ion-button class="div-element-icon">
+                <ion-button class="div-element-icon" (click)="presentAlert9()">
                   <ion-icon class="icon-black" name="invert-mode-outline"></ion-icon>
                 </ion-button>
                 <div class="div-element-text">
