--- a/frontend/Rank-Up/src/app/user-notification-description/user-notification-description.page.html
+++ b/frontend/Rank-Up/src/app/user-notification-description/user-notification-description.page.html
@@ -7,7 +7,7 @@
 
     <h1 align="center" class="title">{{notification.title}}</h1>
 
-    <h4 align="center" class="subtitle">{{notification.date}}</h4>
+    <h4 align="center" class="subtitle">{{notification.date | date:'yyyy-MM-dd HH:mm:ss'}}</h4>
 
     <ion-textarea fill="outline" shape="round" [readonly] = true>{{notification.description}}</ion-textarea>
   </div>
